# Countdown

./: CMakeLists.txt  LICENSE.txt  README.md
src/Countdown/: CMakeLists.txt
src/Countdown/include/: Countdown.hpp
src/Example/: CMakeLists.txt  main.cpp
src/Tests/: BasicTests.cpp  CMakeLists.txt
